# advent-of-code-2021

./: .pre-commit-config.yaml  pyproject.toml
advent_of_code_2021/: day00.py  day01.py  day02.py  day03.py
tests/: test_advent_of_code_2021.py  test_day00.py  test_day01.py  test_day02.py  test_day03.py
